2011-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: Ignore return value from snprintf.
	* src/groupmod.c: Add static qualifier to the cleanup structures.
	* src/groupmod.c: Check atexit failures.

2011-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Do not assign static to NULL.
	* src/usermod.c (date_to_str): buf needs to be unique (e.g.
	independent from negativ), and is an out buffer.
	* src/usermod.c: Ignore return value from snprintf, and force
	nul-termination of buffer.
	* src/usermod.c: Improve memory management.
	* src/usermod.c: An audit bloc was not reachable, moved above on
	success to move the home directory.
	* src/usermod.c: Ignore close() return value for the mailbox
	(opened read only).

2011-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Added const modifiers.
	* lib/prototypes: Synchronize splint annotations.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Add splint annotations.
	* src/su.c: Set caller_on_console as boolean.
	* src/su.c: Ignore retunr value from fputs (usage) / puts (prompt).
	* src/su.c: Improved memory management.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c, src/chpasswd.c, src/newusers.c: Replace cflg by
	a test on crypt_method.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowndir.c: Add splint annotations.
	* src/chgpasswd.c: Likewise.
	* src/chpasswd.c: Likewise.
	* src/newusers.c: Likewise.
	* libmisc/salt.c, lib/prototypes.h (crypt_make_salt): Likewise.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow_.h: Fix typo in comment.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/getgr_nam_gid.c: getgr_nam_gid()
	returns an allocated structure.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>
